--- a/index.html
+++ b/index.html
@@ -5,62 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Meme Trader (MTD)</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>Meme Trader (MTD)</h1>
-    <p>Your gateway to smart meme coin trading.</p>
+    <h1>🚀 Meme Trader (MTD)</h1>
+    <p>Smarter Meme Coin Trading Starts Here</p>
     <div class="alert">
-      ⚠️ This is an early beta version of Meme Trader. A more refined release and the full educational program will launch on <strong>July 1, 2025</strong>.
+      ⚠️ Beta Version – Full launch with educational program on <strong>July 1, 2025</strong>
     </div>
   </header>
 
   <main>
     <section class="section">
-      <h2>📄 Whitepaper</h2>
-      <p><strong>What is Meme Trader?</strong></p>
-      <p>Meme Trader (MTD) is an educational crypto project focused on teaching users how to navigate and trade meme coins safely and smartly. While meme coins are often seen as jokes, they carry real financial risk — and opportunity.</p>
-
-      <p><strong>Why Meme Trader?</strong></p>
-      <p>Many newcomers jump into meme coins without understanding how markets work, leading to poor decisions, FOMO, and even scams. Meme Trader fills this gap by providing structured learning materials, simplified trading strategies, and a community of learners.</p>
-
-      <p><strong>Our Mission</strong></p>
-      <ul>
-        <li>Make meme coin trading safer and smarter for everyone</li>
-        <li>Break down complex crypto terms into beginner-friendly lessons</li>
-        <li>Help users recognize hype vs. real opportunities</li>
-        <li>Build a strong and educated meme coin trading community</li>
-      </ul>
-
-      <p><strong>Roadmap:</strong></p>
-      <ul>
-        <li>✅ June 25, 2025: Official project launch & whitepaper release</li>
-        <li>📘 July 1, 2025: Launch of the educational platform with guides, videos, and Telegram sessions</li>
-      </ul>
-
-      <p><strong>What’s Coming Next?</strong></p>
-      <p>This website is an early version. The next update on <strong>July 1, 2025</strong> will introduce full lessons, video content, and more interactive tools to help you trade with confidence.</p>
-
-      <p><strong>Conclusion:</strong></p>
-      <p>Meme Trader is more than just a meme — it's a movement to bring knowledge, discipline, and community to one of the most unpredictable sectors in crypto. Whether you're a beginner or a degenerate, this is your guide to trading smart.</p>
+      <h2>📘 What is Meme Trader?</h2>
+      <p>MTD is your guide to smart, secure meme coin trading. We simplify trading concepts and empower the next generation of meme coin investors.</p>
     </section>
 
     <section class="section">
-      <h2>🎥 Educational Videos</h2>
-      <p>Coming in July: step-by-step guides, trading psychology, and live breakdowns.</p>
+      <h2>🎯 Mission & Goals</h2>
+      <ul>
+        <li>Educate users about meme coin trends</li>
+        <li>Protect traders from scams and emotional FOMO</li>
+        <li>Deliver guides, breakdowns, and tutorials</li>
+        <li>Build a strong, informed meme trading community</li>
+      </ul>
     </section>
 
     <section class="section">
-      <h2>🔗 Join Us</h2>
-      <button onclick="window.open('https://t.me/+22OwtVG2OaY1YjM0', '_blank')">Join Telegram</button>
-      <button onclick="window.open('https://x.com/MTD_Coin?t=LGE3uksH_DErYeNE_523yg&s=09', '_blank')">Follow us on X</button>
-      <button onclick="copyAddress()">Copy Contract</button>
-      <p id="copied" class="hidden">✅ Contract address copied!</p>
+      <h2>📅 Roadmap</h2>
+      <ul>
+        <li>✅ June 25: Official Launch & Whitepaper</li>
+        <li>🎥 July 1: Start of Educational Program</li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2>📄 Whitepaper Summary</h2>
+      <p>Meme Trader goes beyond hype. We focus on teaching trading psychology, recognizing smart entries, and long-term thinking in a space driven by emotions and trends.</p>
+    </section>
+
+    <section class="section">
+      <h2>💬 Join the Community</h2>
+      <div class="buttons">
+        <button onclick="window.open('https://t.me/+22OwtVG2OaY1YjM0', '_blank')">📲 Telegram</button>
+        <button onclick="window.open('https://x.com/MTD_Coin?t=LGE3uksH_DErYeNE_523yg&s=09', '_blank')">🔗 Follow on X</button>
+        <button onclick="copyAddress()">🔐 Copy Contract</button>
+        <p id="copied" class="hidden">✅ Copied!</p>
+      </div>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Meme Trader (MTD). All rights reserved.</p>
+    <p>&copy; 2025 Meme Trader (MTD) – Learn, Trade, Evolve</p>
   </footer>
 
   <script src="script.js"></script>
