--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="stars-bg"></div>
+
   <header>
     <h1>🚀 Meme Trader (MTD)</h1>
     <p>Smarter Meme Coin Trading Starts Here</p>
+    
     <div class="alert">
-      ⚠️ Beta Version – Full launch with educational program on <strong>July 1, 2025</strong>
+      🌌 <strong>Welcome to the Meme Trader beta!</strong><br />
+      You're exploring a preview of our future-ready platform.<br />
+      🎓 <strong>Full educational journey begins July 1, 2025</strong><br />
+      with interactive lessons, videos, quizzes, and more.
     </div>
   </header>
 
