--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
 <body>
   <div class="stars-bg"></div>
 
-  <header>
+  <nav class="navbar">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#whitepaper">Whitepaper</a></li>
+      <li><a href="#roadmap">Roadmap</a></li>
+      <li><a href="#lessons">Lessons</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <header id="home">
     <h1>🚀 Meme Trader (MTD)</h1>
     <p>Smarter Meme Coin Trading Starts Here</p>
-    
     <div class="alert">
       🌌 <strong>Welcome to the Meme Trader beta!</strong><br />
       You're exploring a preview of our future-ready platform.<br />
@@ -23,35 +32,35 @@
   </header>
 
   <main>
-    <section class="section">
-      <h2>📘 What is Meme Trader?</h2>
-      <p>MTD is your guide to smart, secure meme coin trading. We simplify trading concepts and empower the next generation of meme coin investors.</p>
+    <section class="section" id="whitepaper">
+      <h2>📘 Whitepaper</h2>
+      <p>Meme Trader is more than hype. It’s a smart educational initiative to help traders understand meme coins beyond speculation.</p>
+      <p><strong>Why it matters:</strong> Many lose money on meme coins due to poor entry points, scams, or emotional trades.</p>
+      <p><strong>Our mission:</strong> Empower users with clear strategies, tools, and risk management knowledge through simple, digestible content.</p>
     </section>
 
-    <section class="section">
-      <h2>🎯 Mission & Goals</h2>
-      <ul>
-        <li>Educate users about meme coin trends</li>
-        <li>Protect traders from scams and emotional FOMO</li>
-        <li>Deliver guides, breakdowns, and tutorials</li>
-        <li>Build a strong, informed meme trading community</li>
-      </ul>
-    </section>
-
-    <section class="section">
+    <section class="section" id="roadmap">
       <h2>📅 Roadmap</h2>
       <ul>
-        <li>✅ June 25: Official Launch & Whitepaper</li>
-        <li>🎥 July 1: Start of Educational Program</li>
+        <li>✅ June 25, 2025: Website & whitepaper launch</li>
+        <li>🎓 July 1, 2025: Start of the educational program (lessons, videos)</li>
+        <li>📢 August 2025: Marketing expansion, quizzes & live events</li>
+        <li>🚀 Q4 2025: Launch demo tokens & rewards for top learners</li>
       </ul>
     </section>
 
-    <section class="section">
-      <h2>📄 Whitepaper Summary</h2>
-      <p>Meme Trader goes beyond hype. We focus on teaching trading psychology, recognizing smart entries, and long-term thinking in a space driven by emotions and trends.</p>
+    <section class="section" id="lessons">
+      <h2>🎓 Educational Lessons</h2>
+      <p>Starting July 1, we'll publish step-by-step lessons:</p>
+      <ul>
+        <li>📖 Lesson 1: What Are Meme Coins?</li>
+        <li>📖 Lesson 2: How to Spot a Pump & Exit Smart</li>
+        <li>📖 Lesson 3: Tools You Must Use (DEX, Trackers, Alerts)</li>
+        <li>📖 Lesson 4: Trading Psychology & FOMO Control</li>
+      </ul>
     </section>
 
-    <section class="section">
+    <section class="section" id="contact">
       <h2>💬 Join the Community</h2>
       <div class="buttons">
         <button onclick="window.open('https://t.me/+22OwtVG2OaY1YjM0', '_blank')">📲 Telegram</button>
